--- a/instagram/index.html
+++ b/instagram/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Instagram</title>
 </head>
 <body>
@@ -16,12 +17,12 @@
                 <div class="profile-photo">
                     <img src="./img/perfil-instagram.jpg" alt="foto do perfil">
                 </div>
-                <a href="#" class="intagram-login">Continue como carolladss</a>
+                <a href="#" class="instagram-login">Continue como carolladss</a>
                 <a href="#" class="instagram-logout">Remover contato</a>
             </div>
             <div class="group">
                 <p class="not-account">Não é carolladss?</p>
-                <p class ="notaccount">
+                <p class ="not-account">
                     <span class="link-blue">Alternar contas</span>
                     ou
                     <span class="link-blue">Inscreva-se</span>
@@ -29,11 +30,11 @@
             </div>
             <div class="get-the-app">
                 <p class="get-app">Baixe o aplicativo</p>
+            </div>
                 <div class="download">
                     <a href="#" class="app-download"></a>
                     <a href="#" class="app-download"></a>
                 </div>
-            </div>
         </div>
     </div>
 </body>
